added start script

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Simple chat app",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "test"
   },
