--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
   },
   "homepage": "https://github.com/muganwas/NodeChat#readme",
   "dependencies": {
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.1"
+    "nodemon": "^2.0.2"
   }
 }
